# cs69

./: .gitignore  DirectoryRules.txt
auction/: CMakeLists.txt  package.xml  report.md  setup.py
auction/launch/: robot_group.launch
auction/nodes/: auctioneer  robot_follower  tf_broadcaster  waypoint_broadcaster
flocking/: CMakeLists.txt  README.md  package.xml  report.md  setup.py
flocking/launch/: collision_stage.launch  flocking_gazebo.launch  flocking_stage.launch  gazebo_world.launch  simple_shapes.launch  simple_shapes_pentagon.launch  simple_shapes_square.launch  stage_world.launch  wall_avoider_gazebo.launch
flocking/nodes/: flocker
flocking/src/flocking/: boid.py  wall_avoider.py  wall_avoider_2.py
flocking/worlds/: stage.world  stage_collision.world  wall.world  willow-full.pgm  willow-full.xcf
leader_follower/: CMakeLists.txt  README.md  package.xml  report.md
leader_follower/action/: DriveToTarget.action
leader_follower/launch/: robot_group.launch
leader_follower/nodes/: initialpose_broadcaster  robot_follower  robot_leader  simple_shapes  tf_broadcaster  waypoint_broadcaster
leader_follower/src/leader_follower/: simple_motion.py
leader_follower/srv/: RequestFollowers.srv
leader_follower/urdf/: turtlebot3_waffle_pi.urdf.xacro
simple_motion/: CMakeLists.txt  README.md
simple_shapes/: CMakeLists.txt  README.md  package.xml  report.md  setup.py
simple_shapes/launch/: simple_shapes.launch
simple_shapes/nodes/: simple_shapes
simple_shapes/src/simple_shapes/: simple_motion.py
steiner_tree/: CMakeLists.txt  package.xml  report.md  setup.py
(+13 files in other folders)
