<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>flocking</name>
  <version>0.1.0</version>
  <description>
    ROS package for moving a set of robots in a flocking pattern
  </description>
  <maintainer email="class@class.edu">Class</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
