<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>leader_follower</name>
  <version>0.1.0</version>
  <description>
    ROS package for moving the robot in simple shapes
  </description>
  <maintainer email="class@class.edu">Class</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
